initial html and css

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>index</title>
+        <title>The World</title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="/css/site.css" />
     </head>
     <body>
-        <h3>The World</h3>
-        <p>A paragraph of text. Blah blah blah.</p>
+        <div id="sidebar">
+            <img src="/img/Grandpa-Simpson-Angry.jpg" alt="headshot photo" class="headshot">
+            <span>Sam Hastings</span>
+            <ul class="menu">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+        <div id="main">
+            <h2>The World</h2>
+            <p>A paragraph of text. Blah blah blah.</p>
+            <form>
+                <div>
+                    <label>Date</label>
+                    <input />
+                </div>
+                <div>
+                    <label>Location</label>
+                    <input />
+                </div>
+                <div>
+                    <input type="submit" value="Add" />
+                </div>
+            </form>
+        </div>
+        <div id="footer">
+            &copy; 2016 The World, Inc.
+        </div>
     </body>
 </html>
