--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -15,25 +15,27 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </div>
-        <div id="main">
-            <h2>The World</h2>
-            <p>A paragraph of text. Blah blah blah.</p>
-            <form>
-                <div>
-                    <label>Date</label>
-                    <input />
-                </div>
-                <div>
-                    <label>Location</label>
-                    <input />
-                </div>
-                <div>
-                    <input type="submit" value="Add" />
-                </div>
-            </form>
-        </div>
-        <div id="footer">
-            &copy; 2016 The World, Inc.
+        <div id = "wrapper">
+            <div id="main">
+                <h2>The World</h2>
+                <p>A paragraph of text. Blah blah blah.</p>
+                <form>
+                    <div>
+                        <label>Date</label>
+                        <input />
+                    </div>
+                    <div>
+                        <label>Location</label>
+                        <input />
+                    </div>
+                    <div>
+                        <input type="submit" value="Add" />
+                    </div>
+                </form>
+            </div>
+            <div id="footer">
+                &copy; 2016 The World, Inc.
+            </div>
         </div>
     </body>
 </html>
