--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -8,7 +8,7 @@
     <body>
         <div id="sidebar">
             <img src="/img/Grandpa-Simpson-Angry.jpg" alt="headshot photo" class="headshot">
-            <span>Sam Hastings</span>
+            <span id="username">Sam Hastings</span>
             <ul class="menu">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
@@ -37,5 +37,6 @@
                 &copy; 2016 The World, Inc.
             </div>
         </div>
+        <script type="text/javascript" src="/js/site.js"></script>
     </body>
 </html>
