--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -37,6 +37,7 @@
                 &copy; 2016 The World, Inc.
             </div>
         </div>
+        <script type="text/javascript" src="/lib/jquery/dist/jquery.min.js"></script>
         <script type="text/javascript" src="/js/site.js"></script>
     </body>
 </html>
