--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -17,6 +17,7 @@
         </div>
         <div id = "wrapper">
             <div id="main">
+                <div><button id="sidebarToggle">Toggle Menu</button></div>
                 <h2>The World</h2>
                 <p>A paragraph of text. Blah blah blah.</p>
                 <form>
